<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:widgetLayout="@android:layout/preference_category">

    <PreferenceCategory android:title="@string/visualisation">

        <SwitchPreference
            android:defaultValue="false"
            android:key="available_players"
            android:title="@string/available_players" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="hide_surname"
            android:title="@string/hide" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/restriction">

        <SwitchPreference
            android:defaultValue="false"
            android:key="restrict"
            android:title="@string/restrict_mod_del" />
    </PreferenceCategory>
</PreferenceScreen>