<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivities.MatchDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/round_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:hint="@string/round"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/team_one_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/team_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_one_player_one"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/player_one"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/team_one_player_two"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/player_two"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/team_two_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/team_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_two_player_one"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/player_one"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/team_two_player_two"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/player_two"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/location_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/locationTv"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/date"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/duration_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/duration"
                android:textSize="18dp" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/score_view"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/score"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>