<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddMatchView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/round"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/enter_the_tournament_round"
                android:inputType="textCapSentences"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/team_one"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/team_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_one"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinner_two"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/team_two"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/team_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_three"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinner_four"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/match_center"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/match_date"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/date_of_the_match"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="clickDate" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/match_duration"
                android:inputType="number"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/match_score"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/match_score"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/add_match_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:onClick="createMatch"
                android:text="@string/create_a_match" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>